--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -24,6 +24,7 @@
             $('#insert').text('提交');
         }
         function edit(id) {
+            auth();
             this_id = id;
             $.ajax({
                 url: '/admin/abort/abort_find',
@@ -42,6 +43,7 @@
             })
         }
         function save(id) {
+            auth();
             var content = $('#content').val();
             var show = $('#show').val();
             var zn_en = $('#zn_en').val();
@@ -67,6 +69,7 @@
             })
         }
         function insert() {
+            auth();
             var button = $('#insert').text();
             var content = $('#content').val();
             var show = $('#show').val();
@@ -97,6 +100,23 @@
         }
         function width() {
             $('#example').css('width', '100%');
+        }
+
+        function auth(){
+            $.ajax({
+                url: '/admin/index/role',
+                type: 'POST',
+                dataType: 'json',
+                async: false,
+                data: {},
+                success: function (r) {
+                    if (r.code == 200) {
+                        $('#username').text(r.msg);
+                    } else {
+                        window.location.href='/Public/admin/login.html';
+                    }
+                }
+            });
         }
     </script>
 </head>
