--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -24,6 +24,7 @@
             $('#insert').text('提交');
         }
         function edit(id) {
+            auth();
             this_id = id;
             $.ajax({
                 url: '/admin/contact/contact_find',
@@ -47,6 +48,7 @@
             })
         }
         function save(id) {
+            auth();
             var img = $('#img').val();
             var company = $('#company').val();
             var fax = $('#fax').val();
@@ -82,6 +84,7 @@
             })
         }
         function insert() {
+            auth();
             var button = $('#insert').text();
             var img = $('#img').val();
             var company = $('#company').val();
@@ -122,6 +125,23 @@
         }
         function width() {
             $('#example').css('width', '100%');
+        }
+
+        function auth(){
+            $.ajax({
+                url: '/admin/index/role',
+                type: 'POST',
+                dataType: 'json',
+                async: false,
+                data: {},
+                success: function (r) {
+                    if (r.code == 200) {
+                        $('#username').text(r.msg);
+                    } else {
+                        window.location.href='/Public/admin/login.html';
+                    }
+                }
+            });
         }
     </script>
 </head>
