--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -24,6 +24,7 @@
             $('#insert').text('提交');
         }
         function edit(id) {
+            auth();
             this_id = id;
             $.ajax({
                 url: '/admin/home/banner_find',
@@ -44,6 +45,7 @@
             })
         }
         function save(id) {
+            auth();
             var title = $('#title').val();
             var note = $('#note').val();
             var content = $('#content').val();
@@ -73,6 +75,7 @@
             })
         }
         function insert() {
+            auth();
             var button = $('#insert').text();
             var title = $('#title').val();
             var note = $('#note').val();
@@ -107,6 +110,23 @@
         }
         function width() {
             $('#example').css('width', '100%');
+        }
+
+        function auth(){
+            $.ajax({
+                url: '/admin/index/role',
+                type: 'POST',
+                dataType: 'json',
+                async: false,
+                data: {},
+                success: function (r) {
+                    if (r.code == 200) {
+                        $('#username').text(r.msg);
+                    } else {
+                        window.location.href='/Public/admin/login.html';
+                    }
+                }
+            });
         }
     </script>
 </head>
