--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -24,6 +24,7 @@
             $('#insert').text('提交');
         }
         function edit(id) {
+            auth();
             this_id = id;
             $.ajax({
                 url: '/admin/member/member_find',
@@ -48,6 +49,7 @@
             })
         }
         function save(id) {
+            auth();
             var img = $('#img').val();
             var name = $('#name').val();
             var intro = $('#intro').val();
@@ -85,6 +87,7 @@
             })
         }
         function insert() {
+            auth();
             var button = $('#insert').text();
             var img = $('#img').val();
             var name = $('#name').val();
@@ -127,6 +130,23 @@
         }
         function width() {
             $('#example').css('width', '100%');
+        }
+
+        function auth(){
+            $.ajax({
+                url: '/admin/index/role',
+                type: 'POST',
+                dataType: 'json',
+                async: false,
+                data: {},
+                success: function (r) {
+                    if (r.code == 200) {
+                        $('#username').text(r.msg);
+                    } else {
+                        window.location.href='/Public/admin/login.html';
+                    }
+                }
+            });
         }
     </script>
 </head>
