--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -279,6 +279,15 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar"> 角色管理 <span class="badge bg-primary pull-right">1</span></a>
+                        <ul>
+                            <li><a href="auth.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span> 管理员管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
