--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <title>麦星</title>
     <link rel="stylesheet" type="text/css" href="/Public/home/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/Public/home/css/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" type="text/css" href="/Public/home/css/jPages.css">
+    <link rel="stylesheet" type="text/css" href="/Public/home/css/animate.css">
     <script type="text/javascript" src="/Public/home/js/jquery-2.0.min.js"></script>
     <script type="text/javascript" src="/Public/home/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/Public/home/js/jquery.mCustomScrollbar.js"></script>
-    <script type="text/javascript" src="/Public/home/js/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="/Public/home/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/Public/home/js/jPages.js"></script>
 </head>
 <style>
     ul li {
@@ -63,9 +62,10 @@
         font-family: "Microsoft YaHei";
     }
 
-    #img:hover{
+    #img:hover {
         cursor: pointer;
     }
+
 </style>
 <script>
     $(function () {
@@ -80,8 +80,6 @@
         }
         if (aQuery.indexOf("status") > 0) {
             $('#img img').attr('src', '/Public/home/images/news_en.jpg');
-            $('#more').text('More');
-            $('#ups').text('Up');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
@@ -106,6 +104,11 @@
                         "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
                         "<hr class='col-lg-9 col-lg-offset-2'>");
                     }
+                    $("div.holder").jPages({
+                        containerID: "news_list",
+                        pause: 4000,
+                        clickStop: true
+                    });
                 }
             });
         } else {
@@ -120,6 +123,11 @@
                         "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
                         "<hr class='col-lg-9 col-lg-offset-2'>");
                     }
+                    $("div.holder").jPages({
+                        containerID: "news_list",
+                        pause: 4000,
+                        clickStop: true
+                    });
                 }
             });
         }
@@ -135,9 +143,9 @@
     function search_all() {
         var aQuery = window.location.href;
         $('input[name=name]').val('');
-        var url='/home/index/news';
+        var url = '/home/index/news';
         if (aQuery.indexOf("status") > 0) {
-            url='/home/index/news?status=1';
+            url = '/home/index/news?status=1';
         }
         $('#news_list').empty();
         $.ajax({
@@ -176,16 +184,6 @@
         });
     }
 
-    function show() {
-        $('#show').css('display', 'none');
-        $('#news_list').css('overflow-y', 'scroll');
-        $('#up').css('display', 'block');
-    }
-    function up() {
-        $('#up').css('display', 'none');
-        $('#news_list').css('overflow-y', 'hidden');
-        $('#show').css('display', 'block');
-    }
     function home() {
         var aQuery = window.location.href;  //取得Get参数
         if (aQuery.indexOf("status") > 0) {
@@ -204,8 +202,8 @@
     }
 
     #news_list {
-        max-height: 1000px;
-        overflow-y: hidden;
+        /*max-height: 1000px;
+        overflow-y: hidden;*/
     }
 
     #show, #up:hover {
@@ -362,11 +360,13 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 40px;">
+<div class="container" style="margin-top: 10px;">
+    <div class="holder col-lg-offset-1">
+    </div>
     <div class="row" id="news_list">
 
     </div>
-    <div class="row">
+    <!--<div class="row">
         <div id="show" onclick="show()" class="col-lg-10 col-lg-offset-1"
              style="text-align: center; display:block;color: #999">
             ——&nbsp;&nbsp;<span id="more">查看更多</span>&nbsp;&nbsp;——
@@ -375,7 +375,7 @@
              style="text-align: center;display:none;color: #999">
             ——&nbsp;&nbsp;<span id="ups">收起</span>&nbsp;&nbsp;——
         </div>
-    </div>
+    </div>-->
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom">
