--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -321,6 +321,12 @@
     .col-lg-offset-1 {
         margin-left: 8.33333333%
     }
+
+    .holder{
+        margin-left: 8.333333333%;
+        width: 91.666666666%;
+        text-align: center;
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
@@ -360,11 +366,11 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 10px;">
-    <div class="holder col-lg-offset-1">
-    </div>
+<div class="container" style="margin-top: 40px;">
     <div class="row" id="news_list">
 
+    </div>
+    <div class="holder">
     </div>
     <!--<div class="row">
         <div id="show" onclick="show()" class="col-lg-10 col-lg-offset-1"
