--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -107,6 +107,9 @@
                     $("div.holder").jPages({
                         containerID: "news_list",
                         pause: 4000,
+                        previous : "← previous",
+                        next : "next →",
+                        delay: 30,
                         clickStop: true
                     });
                 }
@@ -126,6 +129,9 @@
                     $("div.holder").jPages({
                         containerID: "news_list",
                         pause: 4000,
+                        previous : "← 上一页",
+                        next : "下一页 →",
+                        delay: 30,
                         clickStop: true
                     });
                 }
