--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -17,11 +17,15 @@
         function add() {
             $('#row_title').empty();
             $('#form').css('display', 'block');
+            $('#mask').css('display','block');
+            document.documentElement.style.overflow = "hidden";
             $('input').val('');
             $('textarea').val('');
         }
         function form_close() {
             $('#form').css('display', 'none');
+            $('#mask').css('display','none');
+            document.documentElement.style.overflow = "";
             $('#insert').text('提交');
             title_num = 0;
         }
@@ -37,6 +41,8 @@
                 },
                 success: function (r) {
                     $('#form').css('display', 'block');
+                    $('#mask').css('display','block');
+                    document.documentElement.style.overflow = "hidden";
                     $('#menu').val(r.msg.menu);
                     $('#show').val(r.msg.show);
                     $('#zn_en').val(r.msg.zn_en);
@@ -90,6 +96,8 @@
                     if (r.code == 200) {
                         oTable.fnReloadAjax();
                         $('#form').css('display', 'none');
+                        $('#mask').css('display','none');
+                        document.documentElement.style.overflow = "";
                         title_num = 0;
                         $('#insert').text('提交');
                     } else {
@@ -133,6 +141,8 @@
                     success: function (r) {
                         if (r.code == 200) {
                             $('#form').css('display', 'none');
+                            $('#mask').css('display','none');
+                            document.documentElement.style.overflow = "";
                             title_num = 0;
                             //oTable.fnReloadAjax('http://localhost:60/admin/home/banner_list');
                             oTable.fnReloadAjax(); //使用默认
@@ -184,6 +194,20 @@
     </script>
 </head>
 <style>
+    #form{
+        position: fixed;
+        z-index: 10;
+        top: 100px ;
+        left: 0 ;
+        right: 0 ;
+        margin:auto !important;
+        height: 500px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        width: 1000px !important;
+        background-color: #FFFFFF;
+        border-radius: 5px;
+    }
     #add:hover {
         cursor: pointer !important;
     }
@@ -229,6 +253,7 @@
     }
 </style>
 <body>
+<div id="mask" style="position: absolute;z-index: 3;background-color: #000;height:100%;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
 <div class="site-holder">
     <nav class="navbar" role="navigation">
         <div class="navbar-header">
