--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -131,6 +131,9 @@
     </script>
 </head>
 <style>
+    #form div img:hover{
+        cursor: pointer;
+    }
     #add:hover {
         cursor: pointer !important;
     }
@@ -295,6 +298,7 @@
                 </div>
             </div>
             <div class="row" id="form" style="width: 97%;margin-bottom: 30px; margin-left: 1%;display: none;">
+                <div style="position: absolute;right: 10px;top: 8px;z-index: 11;" onclick="form_close()"><img src="/Public/home/images/off.jpg"/></div>
                 <form class="form-horizontal" role="form"
                       style="border:1px #fff solid; border-radius: 3px;-webkit-box-shadow: 0 0 6px #333;">
                     <div class="form-group" style="margin-top: 20px;">
