--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -257,6 +257,9 @@
     .active ul li a{
         padding-left: 30px !important;
     }
+    #form div img:hover{
+        cursor: pointer;
+    }
 </style>
 <body>
 <div id="mask" style="position: absolute;z-index: 3;background-color: #000;height:100%;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
@@ -373,6 +376,7 @@
                 </div>
             </div>
             <div class="row" id="form" style="width: 97%;margin-bottom: 30px; margin-left: 1%;display: none;">
+                <div style="position: fixed;margin-left:1060px;top: 103px;z-index: 50;" onclick="form_close()"><img src="/Public/home/images/off.jpg"/></div>
                 <form class="form-horizontal" role="form"
                       style="border:1px #fff solid; border-radius: 3px;-webkit-box-shadow: 0 0 6px #333;">
                     <div class="form-group" style="margin-top: 20px;">
