--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -13,7 +13,6 @@
     <link href="css/font-awesome.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico">
     <script>
-
         function add() {
             $('#form').css('display', 'block');
             $('#mask').css('display','block');
@@ -182,7 +181,6 @@
         top: 100px ;
         left: 0 ;
         right: 0 ;
-        bottom: 0;
         margin:auto !important;
         height: 500px;
         overflow-y: auto;
@@ -191,6 +189,11 @@
         background-color: #FFFFFF;
         border-radius: 5px;
     }
+
+    #form div img:hover{
+        cursor: pointer;
+    }
+
     #add:hover {
         cursor: pointer !important;
     }
@@ -344,6 +347,7 @@
                 </div>
             </div>
             <div class="row" id="form" style="width: 97%;margin-bottom: 30px; margin-left: 1%;display: none;">
+                <div style="position: fixed;margin-left:1060px;top: 105px;z-index: 50;" onclick="form_close()"><img src="/Public/home/images/off.jpg"/></div>
                 <form class="form-horizontal" role="form"
                       style="border:1px #fff solid; border-radius: 3px;-webkit-box-shadow: 0 0 6px #333;">
                     <div class="form-group" style="margin-top: 20px;">
