--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -190,7 +190,7 @@
     }
 </style>
 <body>
-<div id="mask" style="position: absolute;z-index: 3;background-color: #000;height:100%;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
+<div id="mask" style="position: absolute;z-index: 3;background-color: #000;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
 <div class="site-holder">
     <nav class="navbar" role="navigation">
         <div class="navbar-header">
