--- a/Public/admin/auth.html
+++ b/Public/admin/auth.html
@@ -192,7 +192,7 @@
 
 </style>
 <body style="background-color: #FFFFFF !important;">
-<div id="mask" style="position: absolute;z-index: 3;background-color: #000;height:100%;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
+<div id="mask" style="position: absolute;z-index: 3;background-color: #000;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
 <div class="site-holder">
     <nav class="navbar" role="navigation">
         <div class="navbar-header">
