--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -182,7 +182,7 @@
         left: 0 ;
         right: 0 ;
         margin:auto !important;
-        height: 500px;
+        max-height: 450px;
         overflow-y: auto;
         overflow-x: hidden;
         width: 1100px !important;
@@ -238,7 +238,7 @@
     }
 </style>
 <body>
-<div id="mask" style="position: absolute;z-index: 3;background-color: #000;height:100%;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
+<div id="mask" style="position: absolute;z-index: 3;background-color: #000;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
 <div class="site-holder">
     <nav class="navbar" role="navigation">
         <div class="navbar-header">
