--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -169,6 +169,9 @@
         right: 0 ;
         margin:auto !important;
         width: 1100px !important;
+        max-height: 450px;
+        overflow-y: auto;
+        overflow-x: hidden;
         background-color: #FFFFFF;
         border-radius: 5px;
     }
@@ -201,7 +204,7 @@
     }
 
     textarea{
-        height: 100px !important;
+        height: 200px !important;
     }
 
     pre{
@@ -328,7 +331,7 @@
                 </div>
             </div>
             <div class="row" id="form" style="width: 97%;margin-bottom: 30px; margin-left: 1%;display: none;">
-                <div style="position: absolute;right: 10px;top: 8px;z-index: 11;" onclick="form_close()"><img src="/Public/home/images/off.jpg"/></div>
+                <div style="position: fixed;margin-left:1060px;top: 105px;z-index: 50;" onclick="form_close()"><img src="/Public/home/images/off.jpg"/></div>
                 <form class="form-horizontal" role="form"
                       style="border:1px #fff solid; border-radius: 3px;-webkit-box-shadow: 0 0 6px #333;">
                     <div class="form-group" style="margin-top: 20px;">
