--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>麦星</title>
     <link rel="stylesheet" type="text/css" href="/Public/home/css/bootstrap.min.css">
+    <link rel="icon" href="/Public/home/images/icon.png" type="image/x-icon">
     <script type="text/javascript" src="/Public/home/js/jquery-2.0.min.js"></script>
     <script type="text/javascript" src="/Public/home/js/bootstrap.min.js"></script>
 </head>
