--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -5,6 +5,7 @@
     <title>麦星</title>
     <link rel="stylesheet" type="text/css" href="/Public/home/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/Public/home/css/jquery.mCustomScrollbar.css">
+    <link rel="icon" href="/Public/home/images/icon.png" type="image/x-icon">
     <script type="text/javascript" src="/Public/home/js/jquery-2.0.min.js"></script>
     <script type="text/javascript" src="/Public/home/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/Public/home/js/jquery.mCustomScrollbar.js"></script>
