--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>麦星</title>
+    <title>麦星投资</title>
     <link rel="stylesheet" type="text/css" href="/Public/home/css/bootstrap.min.css">
     <link rel="icon" href="/Public/home/images/icon.png" type="image/x-icon">
     <script type="text/javascript" src="/Public/home/js/jquery-2.0.min.js"></script>
@@ -75,6 +75,7 @@
             $("#contact").css('color', '#9b761d');
         }
         if(aQuery.indexOf("status")>0){
+            document.title='Maison Capital';
             $('#img img').attr('src','/Public/home/images/contact_us_en.jpg');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
