--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>麦星</title>
+    <title>麦星投资</title>
     <link rel="stylesheet" type="text/css" href="/Public/home/css/bootstrap.min.css">
     <link rel="icon" href="/Public/home/images/icon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/Public/home/css/jPages.css">
@@ -80,6 +80,7 @@
             $("#news").css('color', '#9b761d');
         }
         if (aQuery.indexOf("status") > 0) {
+            document.title='Maison Capital';
             $('#img img').attr('src', '/Public/home/images/news_en.jpg');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
