--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -416,9 +416,9 @@
 
                         <div class="col-sm-4">
                             <select class="form-control" id="trade">
-                                <option>医疗</option>
-                                <option>消费</option>
-                                <option>高新技术</option>
+                                <option>生活</option>
+                                <option>服务</option>
+                                <option>科技</option>
                             </select>
                         </div>
                     </div>
