--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -618,7 +618,7 @@
         padding: 0;
         position: absolute;
         margin-left: 180px;
-        margin-top: -160px;
+        margin-top: -80px;
         z-index: 2;
     }
 
@@ -642,7 +642,7 @@
         padding: 0;
         position: absolute;
         margin-left: 180px;
-        margin-top: -160px;
+        margin-top: -80px;
         z-index: 2;
     }
 
@@ -725,16 +725,16 @@
             </div>
             <div id="industry_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>医疗</span>
-                    <br><span style='font-size: 12px'>Healthcare</span>
+                    <span>生活</span>
+                    <br><span style='font-size: 12px'>Lifestyle</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>消费</span>
-                    <br><span style='font-size: 12px'>Consumption</span>
+                    <span>服务</span>
+                    <br><span style='font-size: 12px'>Service</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>高新技术</span>
-                    <br><span style='font-size: 12px'>Hign technologies</span>
+                    <span>科技</span>
+                    <br><span style='font-size: 12px'>Technology</span>
                 </div>
             </div>
             <div class='menu menu_cn' id="area" onclick="index(0)" style='width: 180px;'>
@@ -756,10 +756,10 @@
                 <br><span style='font-size: 12px'>By stages</span>
             </div>
             <div id="stage_two" style="display: none">
-                <div class="menu_right" onclick="search(this)" style='width: 180px;'>
+                <!--<div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>早期</span>
                     <br><span style='font-size: 12px'>Early stage</span>
-                </div>
+                </div>-->
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>成长早期</span>
                     <br><span style='font-size: 12px'>Early growth</span>
@@ -774,13 +774,13 @@
             </div>
             <div id="industry_two_en" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>Healthcare</span>
+                    <span>Lifestyle</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>Consumption</span>
+                    <span>Service</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>Hign Technologies</span>
+                    <span>Technology</span>
                 </div>
             </div>
             <div class='menu menu_en' id="area_en" onclick="index(1)" style='width: 180px;'>
@@ -798,9 +798,9 @@
                 <span>BY STAGES</span>
             </div>
             <div id="stage_two_en" style="display: none">
-                <div class="menu_right" onclick="search(this)" style='width: 180px;'>
+                <!--<div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>Early stage</span>
-                </div>
+                </div>-->
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>Early growth</span>
                 </div>
