--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -447,11 +447,11 @@
         left:0;
         right: 0;
         bottom: 0;
-        width: 850px;
+        width: 900px;
         margin: auto;
         background-color: #FFFFFF;
         border-radius: 3px;
-        height: 450px;
+        height: 470px;
         display: none;
     }
 
@@ -471,11 +471,11 @@
     <img style="margin-left: 96%;margin-top: 15px;" src="images/off.jpg"
          onclick="javascript:$('#detail').css('display','none');$('#mask').css('display','none');document.documentElement.style.overflow='';">
 
-    <div class="col-lg-6" style="text-align:center;margin-top: 80px;">
+    <div class="col-lg-5" style="text-align:center;margin-top: 100px;">
         <img id="member_img"
-             style="margin: 0 auto; width: 290px;height: 220px;box-shadow: 0px 3px 6px #999;"/>
+             style="margin: 0 auto; width: 250px;height: 190px;box-shadow: 0px 3px 6px #999;"/>
     </div>
-    <div class="col-lg-6" style="padding: 0;margin-top:0px;width: 47.4% !important;  ">
+    <div class="col-lg-7" style="padding: 0;margin-top:0px;width: 55.7777% !important;">
         <div class="col-lg-11" style="text-align: center"><span id="name"
                                                                 style="font-size: 24px;color: #4c4c4c;"></span></div>
         <div style="height:300px;padding: 0;width: 100%;">
@@ -488,7 +488,7 @@
             <div class="col-lg-1 col-lg-offset-5"
                  style="margin-top: 15px;width:5% !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
             <div class="col-lg-12" id="scroll"
-                 style="margin-top:15px;height: 250px;">
+                 style="margin-top:15px;height: 290px;padding: 0">
                 <div style="padding: 0;color: #4c4c4c;" class="col-lg-12" id="intro"></div>
             </div>
         </div>
