--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -43,6 +43,7 @@
                     document.documentElement.style.overflow = "hidden";
                     $('#img').val(r.msg.img);
                     $('#name').val(r.msg.name);
+                    $('#category').val(r.msg.category);
                     $('#position').val(r.msg.position);
                     $('#position_en').val(r.msg.position_en);
                     $('#intro').val(r.msg.intro);
@@ -58,6 +59,7 @@
             auth();
             var img = $('#img').val();
             var name = $('#name').val();
+            var category = $('#category').val();
             var intro = $('#intro').val();
             var intro_en = $('#intro_en').val();
             var english = $('#english').val();
@@ -73,6 +75,7 @@
                     "id": id,
                     "img": img,
                     "name": name,
+                    "category":category,
                     "position": position,
                     "position_en": position_en,
                     "english": english,
@@ -99,6 +102,7 @@
             var button = $('#insert').text();
             var img = $('#img').val();
             var name = $('#name').val();
+            var category = $('#category').val();
             var intro = $('#intro').val();
             var intro_en = $('#intro_en').val();
             var english = $('#english').val();
@@ -116,6 +120,7 @@
                     data: {
                         "img": img,
                         "name": name,
+                        "category":category,
                         "position": position,
                         "position_en": position_en,
                         "english": english,
@@ -344,8 +349,13 @@
                     <div class="form-group" style="margin-top: 20px;">
                         <label for="english" class="col-sm-1 control-label">英文名</label>
 
-                        <div class="col-sm-10">
+                        <div class="col-sm-4">
                             <input type="text" class="form-control" id="english" name="english">
+                        </div>
+                        <label class="col-sm-1 control-label">类别</label>
+
+                        <div class="col-sm-5">
+                            <input type="text" class="form-control" id="category">
                         </div>
                     </div>
                     <div class="form-group">
