--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -165,6 +165,7 @@
                         "zn_en": zn_en
                     },
                     success: function (r) {
+                        alert(111);
                         if (r.code == 200) {
                             $('#form').css('display', 'none');
                             $('#mask').css('display','none');
