--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -41,6 +41,8 @@
                     $('#mask').css('display','block');
                     document.documentElement.style.overflow = "hidden";
                     $('#title').val(r.msg.title);
+                    $('#time').val(r.msg.time);
+                    $('#sort').val(r.msg.sort);
                     $('#intro').val(r.msg.intro);
                     $('#content1').val(r.msg.content1);
                     $('#content2').val(r.msg.content2);
@@ -59,6 +61,8 @@
         function save(id) {
             auth1();
             var title = $('#title').val();
+            var time = $('#time').val();
+            var sort = $('#sort').val();
             var intro = $('#intro').val();
             var img1 = $('#img1').val();
             var img2 = $('#img2').val();
@@ -77,6 +81,8 @@
                 data: {
                     "id": id,
                     "title": title,
+                    "time":time,
+                    "sort":sort,
                     "intro": intro,
                     "content1": content1,
                     "content2": content2,
@@ -106,6 +112,8 @@
             auth1();
             var button = $('#insert').text();
             var title = $('#title').val();
+            var time = $('#time').val();
+            var sort = $('#sort').val();
             var intro = $('#intro').val();
             var img1 = $('#img1').val();
             var img2 = $('#img2').val();
@@ -126,6 +134,8 @@
                     dataType: 'json',
                     data: {
                         "title": title,
+                        "time":time,
+                        "sort":sort,
                         "intro": intro,
                         "content1": content1,
                         "content2": content2,
@@ -363,6 +373,18 @@
                             <input type="text" class="form-control" id="intro" name="intro">
                         </div>
 
+                    </div>
+                    <div class="form-group" style="margin-top: 20px;">
+                        <label for="title" class="col-sm-1 control-label">时间</label>
+
+                        <div class="col-sm-5">
+                            <input type="datetime-local" class="form-control" id="time">
+                        </div>
+                        <label for="title" class="col-sm-1 control-label">排序</label>
+
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" id="sort">
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="img1" class="col-sm-1 control-label">图片1</label>
