--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -64,25 +64,35 @@
                 $('#auth').text(r.msg.auth);
                 if (r.msg.img1) {
                     $('#img1').attr('src', '../..' + r.msg.img1);
-                    var img1_w=$('#img1').width();
-                    var img1_w=$('#img1').width();
+                    var img1_h = $('#img1').height();
+                    if (img1_h > 500) {
+                        $('#img1').height(500);
+                    }
                 }
                 else {
-                    $('#img1').css('display','none');
+                    $('#img1').css('display', 'none');
                 }
                 $('#content1').html(content1);
                 if (r.msg.img2) {
                     $('#img2').attr('src', '../..' + r.msg.img2);
+                    var img2_h = $('#img2').height();
+                    if (img2_h > 500) {
+                        $('#img2').height(500);
+                    }
                 }
                 else {
-                    $('#img2').css('display','none');
+                    $('#img2').css('display', 'none');
                 }
                 $('#content2').html(content2);
                 if (r.msg.img3) {
                     $('#img3').attr('src', '../..' + r.msg.img3);
+                    var img3_h = $('#img3').height();
+                    if (img3_h > 500) {
+                        $('#img3').height(500);
+                    }
                 }
                 else {
-                    $('#img3').css('display','none');
+                    $('#img3').css('display', 'none');
                 }
                 $('#content3').html(content3);
             }
@@ -113,12 +123,12 @@
         "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
         "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
     }
-    function home(){
+    function home() {
         var aQuery = window.location.href;  //取得Get参数
-        if(aQuery.indexOf("status")>0){
-            window.location.href='index.html?status=1';
-        }else{
-            window.location.href='index.html';
+        if (aQuery.indexOf("status") > 0) {
+            window.location.href = 'index.html?status=1';
+        } else {
+            window.location.href = 'index.html';
         }
     }
 </script>
@@ -152,8 +162,8 @@
         padding: 1px;
     }
 
-    pre{
-      font-size: 14px;
+    pre {
+        font-size: 14px;
     }
 
     #log:hover {
@@ -261,7 +271,7 @@
         margin-left: 8.33333333%
     }
 
-    #img img:hover{
+    #img img:hover {
         cursor: pointer;
     }
 </style>
@@ -273,7 +283,8 @@
                  src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-8" id="top">
-            <div style="text-align: right"><a href="news.html"style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1" onclick="english()">English</a>
+            <div style="text-align: right"><a href="news.html" style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a
+                    href="news.html?status=1" onclick="english()">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -293,7 +304,8 @@
 <div class="container" style="margin-top: -50px;">
     <div class="row">
         <div class="col-lg-3 col-lg-offset-1" id="img">
-            <img src="/Public/home/images/news.jpg" onclick="javascript:history.go(-1)" style="opacity:0.9;-webkit-opacity:0.9;">
+            <img src="/Public/home/images/news.jpg" onclick="javascript:history.go(-1)"
+                 style="opacity:0.9;-webkit-opacity:0.9;">
         </div>
     </div>
 </div>
@@ -341,8 +353,9 @@
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html"
-                                                                         style="text-decoration: none;color: #fff">法律说明</a>
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                href="law.html"
+                style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
